--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Free as the wind<br>心怀爱，勇气，自豪去战斗"
-sidebar-avatar: /img/profile.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/profile.JPG      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
