--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ netease_comment: false
 
 # Google Analytics
 ga_track_id: 'UA-172019925-1'            # Format: UA-xxxxxx-xx
-# ga_domain: huangxuan.me
+ga_domain: auto
 
 
 
